--- a/Halfway/src/Home/HomeViewController.xib
+++ b/Halfway/src/Home/HomeViewController.xib
@@ -71,9 +71,9 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="yFc-cM-MOY">
-                    <rect key="frame" x="113" y="362" width="94" height="16"/>
+                    <rect key="frame" x="113" y="362" width="94" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
-                    <state key="normal" title="Advance">
+                    <state key="normal" title="Advanced">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
